<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipToPadding="false"
        app:layout_anchor="@+id/AppBar"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/detail_portrait"
                        android:layout_width="120dp"
                        android:layout_height="165dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="0dp"
                        android:scaleType="centerCrop"
                        android:transitionName="profile" />
                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Original_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_gravity="start"
                        android:layout_marginStart="55dp"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="Title"
                        android:fontFamily="@font/proxima_nova_regular"
                        android:textColor="@android:color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="36dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="35dp"
                        android:layout_toEndOf="@+id/Vote_tv"
                        android:src="@drawable/ic_stars_black_24dp" />

                    <TextView
                        android:id="@+id/Vote_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="35dp"
                        android:paddingStart="3dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/proxima_nova_regular"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="60dp"
                        android:text="Votes:"
                        android:fontFamily="@font/proxima_nova_regular"

                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/vote_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/proxima_nova_regular"

                        android:textColor="@color/grey"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="110dp"
                        android:layout_toEndOf="@+id/star"
                        android:text="@string/detail_release_date"
                        android:fontFamily="@font/proxima_nova_regular"

                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/Release_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="90dp"
                        android:fontFamily="@font/proxima_nova_regular"

                        android:layout_toEndOf="@+id/date_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/caladericon"
                        android:layout_width="36dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="90dp"
                        android:layout_toEndOf="@+id/Release_tv"
                        android:src="@drawable/ic_today_black_24dp" />

                </RelativeLayout>
            </LinearLayout>


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:fontFamily="@font/proxima_nova_bold"

                    android:text="@string/detail_overview"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Overview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:fontFamily="@font/proxima_nova_regular"

                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="The Cast:"
                    android:fontFamily="@font/proxima_nova_bold"

                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Cast_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/trailer"
                    android:fontFamily="@font/proxima_nova_bold"

                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/NoTrailer_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:text="There are currently no trailers available!"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Trailer_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/review"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/Reviews_tv"
                    android:layout_width="match_parent"
                    android:layout_height="11dp"
                    android:paddingStart="3dp"
                    android:paddingTop="3dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:paddingEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/NoReview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="There are currently no review available!"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Favorite_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Review_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>


            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>